--- a/recipes_app/requirements.txt
+++ b/recipes_app/requirements.txt
@@ -4,6 +4,7 @@ Django==3.2.12
 django-crispy-forms==1.14.0
 Pillow==9.1.0
 psycopg2==2.9.3
+python-dotenv==0.20.0
 pytz==2022.1
 sqlparse==0.4.2
 typing-extensions==4.1.1
